# mayak-logger-lite

./: CMakeLists.txt  LICENSE  README.MD  README.md
.dev/: roadmap.md
demo/: CMakeLists.txt  benchmark.cpp  demo.cpp
include/mayak/: logger-lite.hpp
